# css-lsp-rust

./: AGENTS.md  CHANGELOG.md  Cargo.toml  QUICKSTART.md  README.md  TEST_EXAMPLE.css  TEST_EXAMPLE.html
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: color.rs  dom_tree.rs  lib.rs  lsp_server.rs  main.rs  manager.rs  path_display.rs  runtime_config.rs  specificity.rs  types.rs  workspace.rs
src/parsers/: css.rs  html.rs  mod.rs
tests/: README.md  integration_test.rs
