[package]
name = "css-variable-lsp"
version = "0.1.0"
edition = "2021"
authors = ["lmn45"]
description = "A fast, Rust-based Language Server Protocol implementation for CSS Variables"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/lmn45/css-variable-lsp"
repository = "https://github.com/lmn45/css-variable-lsp"
keywords = ["lsp", "language-server", "css", "variables", "editor"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    "FEATURE_COMPARISON.md",
    "IMPLEMENTATION_STATUS.md",
    "IMPROVEMENTS_SUMMARY.md",
    "PHASE2_COMPLETE.md",
    "PHASE3_COMPLETE.md",
    "TEST_ADDITIONS_SUMMARY.md",
    "CHANGELOG.md",
    "AGENTS.md"
]

[lib]
name = "css_variable_lsp"
path = "src/lib.rs"

[[bin]]
name = "css-variable-lsp"
path = "src/main.rs"

[dependencies]
# LSP framework
tower-lsp = "0.20"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Filesystem and globbing
globset = "0.4"
walkdir = "2.4"

# Color parsing
csscolorparser = "0.6"

# Path handling
pathdiff = "0.2"

# Logging (optional, for debugging)
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
